Better launch approach